--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,7 @@
 		</div>
 		<div class="xiaomi">
 			<a href="#">
-				<img src="img/xiaomi.jpg">
+				<img src="https://ss0.bdstatic.com/-0U0bnSm1A5BphGlnYG/tam-ogel/55bc529876c0b10b9fa154659da25106_121_121.jpg">
 				<p>小米静态官网</p>
 			</a>
 		</div>
