--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="home" id="home">
 		<div class="myPhoto">
-			<img src="https://ss0.bdstatic.com/94oJfD_bAAcT8t7mm9GUKT-xh_/timg?image&quality=100&size=b4000_4000&sec=1460897207&di=2e43127cbf8f5bcd179af1d2055fc1a4&src=http://pic18.nipic.com/20111226/8692585_232223863000_2.jpg" >
+			<img src="http://pic41.nipic.com/20140516/11435189_173022273114_2.jpg" >
 		</div>
 		<div class="home_info">
 			<p class="home_motto">承诺并不只是一个简单的任务，而是一份全力以赴的执着</p>
