--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="home" id="home">
 		<div class="myPhoto">
-			<img src="http://pic41.nipic.com/20140516/11435189_173022273114_2.jpg" >
+			<img src="http://image3.xyzs.com/upload/d9/0d/116926/20130901/137797042795324_0.jpg" >
 		</div>
 		<div class="home_info">
 			<p class="home_motto">承诺并不只是一个简单的任务，而是一份全力以赴的执着</p>
